unpackaged/main/default/objects/T1_Invoice__c/T1_Invoice__c.object-meta.xml
<CustomObject>
    <description>Storing the T1 Invoices.</description>
    <label>T1 Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T1 Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>