unpackaged/main/default/objects/T1_Invoice__c/fields/ARStatus__c.field-meta.xml
<CustomField>
    <fullName>ARStatus__c</fullName>
    <label>AR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceARStatus</valueSetName>
    </valueSet>
</CustomField>