unpackaged/main/default/objects/T1_Invoice__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Yi: Payments__c, Debits__c removed</description>
    <formula>TotalAmount__c - Credits__c + NegativeLineConversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance = Total Amount - Total Net Payments - Credit Notes Applied + Debit Notes Applied + Negative Line Conversions</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>