unpackaged/main/default/objects/T1_Invoice__c/fields/BaseCurrency__c.field-meta.xml
<CustomField>
    <fullName>BaseCurrency__c</fullName>
    <label>Base Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>