unpackaged/main/default/objects/T1_Invoice__c/fields/BaseCurrencyFXDate__c.field-meta.xml
<CustomField>
    <fullName>BaseCurrencyFXDate__c</fullName>
    <label>Base Currency FX Date</label>
    <type>Date</type>
</CustomField>