unpackaged/main/default/objects/T1_Invoice__c/fields/BaseCurrencyFXRate__c.field-meta.xml
<CustomField>
    <fullName>BaseCurrencyFXRate__c</fullName>
    <label>Base Currency FX Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>