unpackaged/main/default/objects/T1_Invoice__c/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Bill To contact for this invoice</inlineHelpText>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (BillToContact)</relationshipLabel>
    <relationshipName>BillToContactT1Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>