unpackaged/main/default/objects/T1_Invoice__c/fields/CorrectiveAction__c.field-meta.xml
<CustomField>
    <fullName>CorrectiveAction__c</fullName>
    <label>Corrective Action (Payment Run)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ActionRequired</fullName>
                <label>Action Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>