unpackaged/main/default/objects/T1_Invoice__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <inlineHelpText>Sum of all credit note amounts applied to this invoice</inlineHelpText>
    <label>Credits</label>
    <summarizedField>T1_Invoice_Line__c.Credits__c</summarizedField>
    <summaryForeignKey>T1_Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>