unpackaged/main/default/objects/T1_Invoice__c/fields/Customer_Invoice_Plan__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Invoice Plan</label>
    <referenceTo>Customer_Invoice_Plan__c</referenceTo>
    <relationshipLabel>T1 Invoices</relationshipLabel>
    <relationshipName>T1Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>