unpackaged/main/default/objects/T1_Invoice__c/fields/DaysOutstanding__c.field-meta.xml
<CustomField>
    <fullName>DaysOutstanding__c</fullName>
    <formula>Today() - DueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>