unpackaged/main/default/objects/T1_Invoice__c/fields/Finance_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Finance_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finance Reviewed checkbox will stop the integration from syncing the invoicing until Finance have reviewed and updated the Purchase Order Number.</description>
    <label>Finance Reviewed</label>
    <type>Checkbox</type>
</CustomField>