unpackaged/main/default/objects/T1_Invoice__c/fields/ImpactAmount__c.field-meta.xml
<CustomField>
    <fullName>ImpactAmount__c</fullName>
    <formula>TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>