unpackaged/main/default/objects/T1_Invoice__c/fields/Increase_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Increase_Rate_Type__c</fullName>
    <formula>Source_Invoice__r.Increase_Rate_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Increase Rate Type</label>
    <type>Text</type>
</CustomField>