unpackaged/main/default/objects/T1_Invoice__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <inlineHelpText>Drives the Due Date and financial reporting period</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>