unpackaged/main/default/objects/T1_Invoice__c/fields/InvoicePostedDate__c.field-meta.xml
<CustomField>
    <fullName>InvoicePostedDate__c</fullName>
    <inlineHelpText>The date on which the invoice was posted</inlineHelpText>
    <label>Invoice Posted Date</label>
    <type>Date</type>
</CustomField>