unpackaged/main/default/objects/T1_Invoice__c/fields/InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatus__c</fullName>
    <description>Warning: Invoice Status is an internal field. Changing it could cause basic functionality to fail or become unstable.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceStatus</valueSetName>
    </valueSet>
</CustomField>