unpackaged/main/default/objects/T1_Invoice__c/fields/NegativeLineConversion__c.field-meta.xml
<CustomField>
    <fullName>NegativeLineConversion__c</fullName>
    <label>Negative Line Conversion</label>
    <summarizedField>T1_Invoice_Line__c.NegativeLineConversion__c</summarizedField>
    <summaryForeignKey>T1_Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>