unpackaged/main/default/objects/T1_Invoice__c/fields/NumberOfInvoiceLines__c.field-meta.xml
<CustomField>
    <fullName>NumberOfInvoiceLines__c</fullName>
    <label>Number Of Invoice Lines</label>
    <summaryForeignKey>T1_Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>