unpackaged/main/default/objects/T1_Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>OrderT1Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>