unpackaged/main/default/objects/T1_Invoice__c/fields/Ready_to_sync__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to sync</label>
    <type>Checkbox</type>
</CustomField>