unpackaged/main/default/objects/T1_Invoice__c/fields/Source_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Source_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>From which T1 invoice is cloned.</description>
    <label>Source Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>T1 Invoices</relationshipLabel>
    <relationshipName>T1_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>