unpackaged/main/default/objects/T1_Invoice__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Roll-up on invoice line’s minimum start date.</description>
    <inlineHelpText>Roll-up on invoice line’s minimum start date.</inlineHelpText>
    <label>Start Date</label>
    <summarizedField>T1_Invoice_Line__c.StartDate__c</summarizedField>
    <summaryForeignKey>T1_Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>