unpackaged/main/default/objects/T1_Invoice__c/fields/StatusFlag__c.field-meta.xml
<CustomField>
    <fullName>StatusFlag__c</fullName>
    <description>Yellow - Invoices that are Active
Green - Invoices that have been Paid
Red - Invoices that are Overdue
White - Invoices that have been Cancelled</description>
    <formula>IF(ISPICKVAL(InvoiceStatus__c, &#39;Cancelled&#39;),IMAGE(&quot;/resource/images/Flag_white.gif&quot;, &quot;White&quot;),
IF((Balance__c = 0), Image(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;) ,
     IF(TODAY() &gt;  DueDate__c &amp;&amp; (Balance__c &gt; 0),                                               
			Image(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
			Image(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;)
		)
))</formula>
    <inlineHelpText>Orange = active invoice with a balance;  Green = no balance due; Red = past due; White = canceled</inlineHelpText>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>