unpackaged/main/default/objects/T1_Invoice__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <inlineHelpText>Invoice total (excluding tax)</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>T1_Invoice_Line__c.Subtotal__c</summarizedField>
    <summaryForeignKey>T1_Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>