unpackaged/main/default/objects/T1_Invoice__c/fields/TargetDate__c.field-meta.xml
<CustomField>
    <fullName>TargetDate__c</fullName>
    <label>Target  Date</label>
    <type>Date</type>
</CustomField>