unpackaged/main/default/objects/T1_Invoice__c/fields/Tax_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_Name__c</fullName>
    <description>Used to represent the Tax Code Name from the Customer/Account on the Invoice Object.</description>
    <formula>TEXT(Account__r.Tax_Code_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Code Name</label>
    <type>Text</type>
</CustomField>