unpackaged/main/default/objects/T1_Invoice__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <inlineHelpText>Sum of all taxes for this invoice</inlineHelpText>
    <label>Tax</label>
    <summarizedField>T1_Invoice_Line__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>T1_Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>