unpackaged/main/default/objects/T1_Invoice__c/fields/TaxStatus__c.field-meta.xml
<CustomField>
    <fullName>TaxStatus__c</fullName>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__TaxStatus</valueSetName>
    </valueSet>
</CustomField>