unpackaged/main/default/objects/T1_Invoice__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <inlineHelpText>Invoice total (including tax). Equals SubTotal + Tax.</inlineHelpText>
    <label>Total Amount (With Tax)</label>
    <summarizedField>T1_Invoice_Line__c.TotalAmount__c</summarizedField>
    <summaryForeignKey>T1_Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>