unpackaged/main/default/objects/T1_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Processed__c</columns>
    <columns>Ready_to_sync__c</columns>
    <columns>InvoiceStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>