unpackaged/main/default/objects/T1_Invoice__c/listViews/My_Invoices.listView-meta.xml
<ListView>
    <fullName>My_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Invoices</label>
</ListView>