unpackaged/main/default/objects/T1_Invoice__c/listViews/Unposted_Invoices.listView-meta.xml
<ListView>
    <fullName>Unposted_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>Order__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>InvoiceStatus__c</columns>
    <columns>Finance_Reviewed__c</columns>
    <columns>Processed__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InvoiceStatus__c</field>
        <operation>notEqual</operation>
        <value>Posted</value>
    </filters>
    <label>Unposted Invoices</label>
</ListView>